[project]
name = "polybench-parsers"
version = "0.1.0"
description = "Test output parsers for various programming languages and testing frameworks"
readme = "README.md"
authors = [{name = "Anurag Kashyap", email = ""}]
requires-python = ">=3.13"
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
