[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polybench-parsers"
version = "0.1.0"
description = "Test output parsers for various programming languages and testing frameworks"
readme = "README.md"
authors = [{name = "Anurag Kashyap", email = "anurag1457@gmail.com"}]
requires-python = ">=3.10"
dependencies = []
keywords = ["testing", "parsers", "test-output", "java", "python", "javascript", "typescript"]
license = {text = "CC-BY-NC-4.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/yourusername/polybench-parsers"
Repository = "https://github.com/yourusername/polybench-parsers"
Issues = "https://github.com/yourusername/polybench-parsers/issues"

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "twine>=4.0.0",
    "build>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["polybench_parsers"]
